--- a/public/project/client/views/users/profile.view.html
+++ b/public/project/client/views/users/profile.view.html
@@ -2,7 +2,7 @@
     <div class="col-md-2">
         <ul class="nav nav-pills nav-stacked hidden-xs hidden-sm">
             <li role="presentation" class="active"><a href="#/profile">Profile</a></li>
-            <li role="presentation"><a href="#/favorite">Favorite Doctors</a></li>
+            <li ng-if="currentUser.role == 'Patient'" role="presentation"><a href="#/favorite">Favorite Doctors</a></li>
             <li role="presentation"><a href="#/review">My Reviews</a></li>
             <li role="presentation"><a href="#/message">My Messages</a></li>
         </ul>
