--- a/public/project/client/views/users/login.view.html
+++ b/public/project/client/views/users/login.view.html
@@ -8,8 +8,8 @@
 </div>
 <div class="col-md-6">
     <div class="form-group">
-        <label for="email">Email:</label>
-        <input ng-model="user.email" class="form-control" type="text" id="email" placeholder="bob@gmail.com">
+        <label for="username">Username:</label>
+        <input ng-model="user.username" class="form-control" type="text" id="username" placeholder="bob">
     </div>
     <div class="form-group">
         <label for="password">Password:</label>
