--- a/public/project/client/views/reviews/review.view.html
+++ b/public/project/client/views/reviews/review.view.html
@@ -10,7 +10,8 @@
     <div class="table-responsive col-md-8">
         <table class="table table-striped">
             <thead>
-            <th>To</th>
+            <th ng-if="currentUser.role == 'Patient'">To</th>
+            <th ng-if="currentUser.role == 'Provider'">From</th>
             <th>Date</th>
             <th>Overall Rating</th>
             <th>Comment</th>
@@ -18,13 +19,15 @@
             </thead>
             <tbody>
             <tr ng-repeat="review in model.reviews">
-                <td>{{review.doctorName}}</td>
+                <td ng-if="currentUser.role == 'Patient'">{{review.doctorName}}</td>
+                <td ng-if="currentUser.role == 'Provider'">{{review.username}}</td>
                 <td>{{review.reviewDate | date}}</td>
                 <td>{{review.overall}}</td>
                 <td>{{review.comments}}</td>
                 <td>
-                    <a class="btn btn-warning" ng-click="model.edit(review)"  role="button">Edit</a>
-                    <button class="btn btn-danger" ng-click="model.deleteReview(review)" role="button">Delete</button>
+                    <a ng-if="currentUser.role == 'Provider'" class="btn btn-warning" ng-click=""  role="button">Reply</a>
+                    <a ng-if="currentUser.role == 'Patient'" class="btn btn-warning" ng-click="model.edit(review)"  role="button">Edit</a>
+                    <button ng-if="currentUser.role == 'Patient'" class="btn btn-danger" ng-click="model.deleteReview(review)" role="button">Delete</button>
                 </td>
             </tr>
             </tbody>
