--- a/public/project/client/views/search/detail.view.html
+++ b/public/project/client/views/search/detail.view.html
@@ -87,7 +87,7 @@
     <div class="col-md-12" ng-repeat="review in model.reviews">
         <div class="col-md-2">
             <div>by {{review.username}}</div>
-            <div><button ng-click="model.openMsgPop(review.userId, review.username)" class="btn btn-default"><span class="glyphicon glyphicon-envelope"></span></button></div>
+            <div><button ng-click="model.openMsgPop(review.userId, review.username)" class="btn btn-default"><span class="glyphicon glyphicon-envelope"></span></button>Send Message</div>
         </div>
         <div class="col-md-7">
             <div class="row">
@@ -128,6 +128,17 @@
             <div class="row">
                 <div class="col-md-12">
                     {{review.comments}}
+                </div>
+            </div>
+            <!--doctor's comment section-->
+            <div class="row">
+                <div class="col-md-12 detailBox" >
+                    <div class="titleBox">
+                        <label>Comment From Dr.XXX</label>
+                    </div>
+                    <div class="commentBox">
+                        <p class="taskDescription">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    </div>
                 </div>
             </div>
         </div>
