--- a/public/project/style/style.css
+++ b/public/project/style/style.css
@@ -3,3 +3,24 @@ td {
     overflow: hidden;
     white-space: nowrap;
 }
+
+.detailBox {
+    width:320px;
+    border:1px solid #bbb;
+    /*margin:50px;*/
+}
+
+.titleBox {
+    background-color:#fdfdfd;
+    padding:10px;
+}
+.titleBox label{
+    color:#444;
+    margin:0;
+    display:inline-block;
+}
+
+.commentBox {
+    padding:10px;
+    border-top:1px dotted #bbb;
+}
