--- a/public/project/client/views/search/detail.view.html
+++ b/public/project/client/views/search/detail.view.html
@@ -138,13 +138,13 @@
                 </div>
             </div>
             <!--doctor's comment section-->
-            <div class="row">
-                <div class="col-md-12 detailBox" >
+            <div class="row"  ng-repeat="reply in review.replies">
+                <div class="col-md-12 detailBox">
                     <div class="titleBox">
-                        <label>Comment From Dr.XXX</label>
+                        <label>Comment From {{reply.doctorName}}</label>
                     </div>
                     <div class="commentBox">
-                        <p class="taskDescription">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <p class="taskDescription">{{reply.content}}</p>
                     </div>
                 </div>
             </div>
