project: fixed bug in rendering replies in detail.view

--- a/public/project/client/views/search/detail.view.html
+++ b/public/project/client/views/search/detail.view.html
@@ -141,7 +141,7 @@
             <div class="row"  ng-repeat="reply in review.replies">
                 <div class="col-md-12 detailBox">
                     <div class="titleBox">
-                        <label>Comment From {{reply.doctorName}}</label>
+                        <label>Comment from {{reply.senderName}}</label>
                     </div>
                     <div class="commentBox">
                         <p class="taskDescription">{{reply.content}}</p>
