project: refactor review.view.html, ajusted rating star's css

--- a/public/project/client/views/reviews/review.view.html
+++ b/public/project/client/views/reviews/review.view.html
@@ -7,30 +7,92 @@
             <li role="presentation"><a href="#/message">My Messages</a></li>
         </ul>
     </div>
-    <div class="table-responsive col-md-8">
-        <table class="table table-striped">
-            <thead>
-            <th ng-if="currentUser.role == 'Patient'">To</th>
-            <th ng-if="currentUser.role == 'Provider'">From</th>
-            <th>Date</th>
-            <th>Overall Rating</th>
-            <th>Comment</th>
-            <th>&nbsp;</th>
-            </thead>
-            <tbody>
-            <tr ng-repeat="review in model.reviews">
-                <td ng-if="currentUser.role == 'Patient'">{{review.doctorName}}</td>
-                <td ng-if="currentUser.role == 'Provider'">{{review.username}}</td>
-                <td>{{review.reviewDate | date}}</td>
-                <td>{{review.overall}}</td>
-                <td>{{review.comments}}</td>
-                <td>
-                    <a ng-if="currentUser.role == 'Provider'" class="btn btn-warning" ng-click="model.replyReview()"  role="button">Reply</a>
-                    <a ng-if="currentUser.role == 'Patient'" class="btn btn-warning" ng-click="model.edit(review)"  role="button">Edit</a>
-                    <button ng-if="currentUser.role == 'Patient'" class="btn btn-danger" ng-click="model.deleteReview(review)" role="button">Delete</button>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+    <div class="col-md-8 ">
+    <div class="row reviewCard" ng-repeat="review in model.reviews">
+        <div class="col-md-3">
+            <p>{{review.reviewDate | date}}</p>
+            <p>by {{review.username}}</p>
+        </div>
+        <div class="col-md-9">
+            <div class="row">
+                <div class="col-md-4">
+                    <div>Overall Rating</div>
+                    <div><input-stars
+                            max="5"
+                            icon-base="fa fa-fw"
+                            icon-empty="fa fa-star-o"
+                            icon-hover="hover"
+                            icon-full="fa fa-star"
+                            ng-model="review.overall"
+                            readonly="true">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div>Bedside Manner</div>
+                    <div><input-stars
+                            max="5"
+                            icon-base="fa fa-fw"
+                            icon-empty="fa fa-star-o"
+                            icon-hover="hover"
+                            icon-full="fa fa-star"
+                            ng-model="review.bedsideManner"
+                            readonly="true">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div>
+                        <div>Wait Time</div>
+                        <div>
+                            <input-stars
+                                    max="5"
+                                    icon-base="fa fa-fw"
+                                    icon-empty="fa fa-star-o"
+                                    icon-hover="hover"
+                                    icon-full="fa fa-star"
+                                    ng-model="review.waitTime"
+                                    readonly="true">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <p>{{review.comments}}</p>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
 </div>
+
+
+<!--<div class="table-responsive col-md-10">-->
+<!--<table class="table table-striped">-->
+<!--<thead>-->
+<!--<th ng-if="currentUser.role == 'Patient'">To</th>-->
+<!--<th ng-if="currentUser.role == 'Provider'">From</th>-->
+<!--<th>Date</th>-->
+<!--<th>Overall Rating</th>-->
+<!--<th>Comment</th>-->
+<!--<th>My reply</th>-->
+<!--<th>&nbsp;</th>-->
+<!--</thead>-->
+<!--<tbody>-->
+<!--<tr ng-repeat="review in model.reviews">-->
+<!--<td ng-if="currentUser.role == 'Patient'">{{review.doctorName}}</td>-->
+<!--<td ng-if="currentUser.role == 'Provider'">{{review.username}}</td>-->
+<!--<td>{{review.reviewDate | date}}</td>-->
+<!--<td>{{review.overall}}</td>-->
+<!--<td>{{review.comments}}</td>-->
+<!--<td>{{review.reply}}</td>-->
+<!--<td>-->
+<!--<a ng-if="currentUser.role == 'Provider'" class="btn btn-warning" ng-click="model.openReplyPop(review)"  role="button">Reply</a>-->
+<!--<a ng-if="currentUser.role == 'Provider'" class="btn btn-warning" ng-click="model.openReplyPop(review)"  role="button">Edit Reply</a>-->
+<!--<a ng-if="currentUser.role == 'Provider'" class="btn btn-warning" ng-click="model.openReplyPop(review)"  role="button">Delete Rely</a>-->
+<!--<a ng-if="currentUser.role == 'Patient'" class="btn btn-warning" ng-click="model.edit(review)"  role="button">Edit</a>-->
+<!--<button ng-if="currentUser.role == 'Patient'" class="btn btn-danger" ng-click="model.deleteReview(review)" role="button">Delete</button>-->
+<!--</td>-->
+<!--</tr>-->
+<!--</tbody>-->
+<!--</table>-->
+<!--</div>-->
