--- a/public/project/style/angular-input-stars.css
+++ b/public/project/style/angular-input-stars.css
@@ -13,8 +13,8 @@
 	font-size: 17px;
 
 	display: inline-block;
-	padding-right: 5px;
-	padding-left: 5px;
+	/*padding-right: 1px;*/
+	/*padding-left: 1px;*/
 	
 	cursor: pointer;	
 
