--- a/public/project/style/style.css
+++ b/public/project/style/style.css
@@ -24,3 +24,9 @@ td {
     padding:10px;
     border-top:1px dotted #bbb;
 }
+
+.reviewCard {
+    border:1px solid #bbb;
+    margin:25px;
+    padding: 10px;
+}
