--- a/public/project/client/views/reviews/review.view.html
+++ b/public/project/client/views/reviews/review.view.html
@@ -12,6 +12,9 @@
         <div class="col-md-3">
             <p>{{review.reviewDate | date}}</p>
             <p>by {{review.username}}</p>
+            <div> <a><span ng-click="model.openReplyPop(review)" class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Reply</a></div>
+            <div> <a><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit</a></div>
+            <div> <a><span class="glyphicon glyphicon glyphicon-remove" aria-hidden="true"></span> Remove</a></div>
         </div>
         <div class="col-md-9">
             <div class="row">
@@ -58,6 +61,15 @@
             <div class="row">
                 <div class="col-md-12">
                     <p>{{review.comments}}</p>
+                </div>
+            </div>
+            <div ng-if="review.reply" class="row commentCard">
+                <div class="col-md-12">
+                    <p><strong>Comment from {{review.doctorName}}</strong></p>
+                    <p>{{review.reply.date | date}}</p>
+                </div>
+                <div class="col-md-12">
+                    <p>{{review.reply.content}}</p>
                 </div>
             </div>
         </div>
