--- a/public/project/client/views/reviews/review.view.html
+++ b/public/project/client/views/reviews/review.view.html
@@ -12,7 +12,7 @@
         <div class="col-md-3">
             <p>{{review.reviewDate | date}}</p>
             <p>by {{review.username}}</p>
-            <div> <a><span ng-click="model.openReplyPop(review)" class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Reply</a></div>
+            <div> <a ng-click="model.openReplyBox(review._id)"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Reply</a></div>
             <div> <a><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit</a></div>
             <div> <a><span class="glyphicon glyphicon glyphicon-remove" aria-hidden="true"></span> Remove</a></div>
         </div>
@@ -70,6 +70,15 @@
                 </div>
                 <div class="col-md-12">
                     <p>{{review.reply.content}}</p>
+                </div>
+            </div>
+            <div class="row replyBox" ng-hide="model.replyId!= review._id">
+                <div class="form-group">
+                    <textarea class="form-control" rows="3"/>
+                </div>
+                <div class="pull-right">
+                    <button class="btn btn-success">Reply</button>
+                    <button class="btn btn-danger" ng-click="model.cancelReply()">Cancel</button>
                 </div>
             </div>
         </div>
