--- a/public/project/client/views/messages/message.view.html
+++ b/public/project/client/views/messages/message.view.html
@@ -4,7 +4,7 @@
             <li role="presentation"><a href="#/profile">Profile</a></li>
             <li ng-if="currentUser.role == 'Patient'" role="presentation"><a href="#/favorite">Favorite Doctors</a></li>
             <li role="presentation"><a href="#/review">My Reviews</a></li>
-            <li role="presentation"  class="active"><a href="#/message">My Messages</a></li>
+            <li ng-if="currentUser.role == 'Patient'" role="presentation"  class="active"><a href="#/message">My Messages</a></li>
         </ul>
     </div>
     <div class="table-responsive col-md-8">
