--- a/public/project/client/views/reviews/removePop.view.html
+++ b/public/project/client/views/reviews/removePop.view.html
@@ -1,7 +1,8 @@
 <div class="modal-body">
     <div class="popText">
         <span class="glyphicon glyphicon-warning-sign fa-lg"></span>
-        <q >Are you sure you want to delete this comment?</q>
+        <q ng-if="currentUser.role == 'Provider'">Are you sure you want to delete this comment?</q>
+        <q ng-if="currentUser.role == 'Patient'">Are you sure you want to delete this review?</q>
     </div>
 </div>
 
